<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="@color/secondaryLightColor">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_logo"
                android:layout_marginTop="72dp"
                app:layout_constraintTop_toBottomOf="@+id/title2" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            <EditText
                    android:id="@+id/tl_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:fontFamily="@font/netmarbleb"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_email"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primaryDarkColor"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/ti_email" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">

            <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:fontFamily="@font/netmarbleb"
                    android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_password"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:background="@drawable/bg_btn_main"
                android:text="@string/login"
                android:textSize="14sp"
                android:fontFamily="@font/netmarbleb"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/ti_password" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"/>

        <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:textSize="12sp"
                android:text="@string/btn_link_to_register"
                android:textAlignment="center"
                android:layout_marginTop="72dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_register"
                android:textSize="12sp"
                android:text="@string/btn_link_to_resetpassword"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_register" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"/>

            <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_forgot_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/button_margin"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:visibility="gone"/>
        <TextView
                android:text="ViennaCoffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ViennaCoffee" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="36sp"
                app:layout_constraintHorizontal_bias="0.496" android:fontFamily="@font/netmarbleb"
                android:textColor="@color/accentColor"/>
        <TextView
                android:text="로그인"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ViennaCoffee" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:textSize="36sp" android:fontFamily="@font/netmarbleb"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>