<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tl_business_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="42dp" app:layout_constraintTop_toBottomOf="@+id/titile2_register">

            <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/bg_basic_button"
                    android:hint="@string/name"
            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/ti_name">

            <EditText
                    android:id="@+id/tl_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/bg_basic_button"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_email"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/ti_email">

            <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>


        <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_password"
                android:paddingLeft="@dimen/button_padding"

                android:paddingRight="@dimen/button_padding"
                android:text="등록하기"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp" android:background="@color/primaryColor"
                android:textColor="@color/accentColor" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/ti_password" app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_register"
                android:padding="@dimen/button_margin"
                android:text="@string/btn_link_to_login"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

        <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/button_margin"
                android:visibility="gone"/>
        <TextView
                android:text="회원가입"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titile2_register" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/title_register" android:textSize="36sp"
                android:textColor="@color/accentColor" android:fontFamily="@font/netmarbleb"/>
        <TextView
                android:text="일반고객"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_register" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="36sp"
                android:fontFamily="@font/netmarbleb"/>
    </android.support.constraint.ConstraintLayout>

</ScrollView>