<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialog_store_selection"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="280dp"
            android:layout_height="328dp"
            android:orientation="vertical"
            android:background="@drawable/bg_dialog_main4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="153dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="근처 매장"
                android:textSize="24dp"
                android:fontFamily="@font/netmarbleb"
                android:layout_gravity="center"/>

        <TextView
                android:layout_margin="8dp"
                android:id="@+id/store_name"
                android:fontFamily="@font/netmarbleb"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/header1"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="189dp"
                tools:layout_editor_absoluteY="121dp"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

            <ImageView
                    android:layout_margin="16dp"
                    android:id="@+id/img_store"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:text="test"
                    android:src="@drawable/img_store"
                    tools:layout_editor_absoluteX="64dp"
                    tools:layout_editor_absoluteY="121dp"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical">


                <TextView
                        android:layout_margin="8dp"
                        android:fontFamily="@font/netmarblem"
                        android:textSize="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/accentColor"
                        android:id="@+id/store_brand"/>

                <TextView
                        android:layout_margin="8dp"
                        android:id="@+id/store_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/netmarblel"
                        android:textSize="14dp"
                        android:layout_marginTop="16dp"
                        tools:layout_editor_absoluteX="189dp"
                        tools:layout_editor_absoluteY="162dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
            <Button
                    android:id="@+id/select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    tools:layout_editor_absoluteX="214dp"
                    tools:layout_editor_absoluteY="375dp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
            <Button
                    android:id="@+id/later"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/later"
                    tools:layout_editor_absoluteX="98dp"
                    tools:layout_editor_absoluteY="375dp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>