<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragment.RegisterOwnerFragment">


        <TextView
                android:text="사업자"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title1"
                android:layout_marginTop="36dp"
                android:textSize="36sp"
                android:fontFamily="@font/netmarbleb"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="회원가입"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title3"
                android:textSize="36sp"
                android:fontFamily="@font/netmarbleb"
                android:textColor="@color/accentColor"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/title1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/tl_store_name"
                android:layout_marginTop="24dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:hint="@string/hint_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tl_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:hint="@string/hint_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_business_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tl_pwd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_business_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lfo_hint_bc"
            />
        </android.support.design.widget.TextInputLayout>
        <TextView
                android:text="@string/btn_link_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gotologin"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_register"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tl_store_name"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/title3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"


        >

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="지점명을 입력하세요"
                    android:id="@+id/et_store_name"/>
        </android.support.design.widget.TextInputLayout>
        <Button
                android:text="등록하기"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_register" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tl_business_code" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:background="@color/primaryColor"
                android:textColor="@color/accentColor"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar2" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintVertical_bias="0.717" android:visibility="invisible"/>
    </android.support.constraint.ConstraintLayout>


</layout>